--- a/views/card.hbs
+++ b/views/card.hbs
@@ -1,5 +1,6 @@
 <h1>Корзина</h1>
 
+<div id="card">
 {{#if courses.length}}
     <table>
         <thead>
@@ -14,7 +15,7 @@
             <tr>
                 <td>{{title}}</td>
                 <td>{{count}}</td>
-                <td><button class="btn btn-small">Удалить</button></td>
+                <td><button class="btn btn-small js-remove" data-id="{{id}}">Удалить</button></td>
             </tr>
             {{/each}}
         </tbody>
@@ -23,3 +24,4 @@
 {{else}}
     <p>Корзина пуста</p>
 {{/if}}
+</div>
