--- a/views/course-edit.hbs
+++ b/views/course-edit.hbs
@@ -1,6 +1,6 @@
 <h1>Редактировать {{course.title}}</h1>
 
-<form action="/courses/edit" method="POST">
+<form action="/courses/edit" method="POST" class="course-form">
     <div class="input-field">
         <input id="title" name="title" type="text" class="validate" required value="{{course.title}}">
         <label for="title">Название курса</label>
@@ -19,5 +19,10 @@
         <span class="helper-text" data-error="Введите URL картинки"></span>
     </div>
     <input type="hidden" name="id" value="{{course.id}}">
-    <button class="btn btn-primeri">Редактировать</button>
+    <button type="submit" class="btn btn-primeri">Редактировать</button>
+</form>
+
+<form action="/courses/remove" method="POST">
+    <input type="hidden" name="id" value="{{course.id}}">
+    <button type="submit" class="btn red">Удалить курс</button>
 </form>
